--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
       </div>
     </footer>
 
-    <script src="dist/js/jquery-3.4.1.slim.min.js"></script>
-    <script src="dist/js/popper.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.4.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>      
       $( document ).ready(function() {
         $('body').scrollspy({ target: '#main-navbar' })
