--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
             <div class="row my-3 my-lg-4 flex-column-reverse flex-sm-column-reverse flex-md-row flex-lg-row">
               <div class="col-md-7 my-3 my-lg-4">
                 <div class="graphic">
-                  <!--iframe
+                  <iframe
                     src="https://apibueno-dashboard.herokuapp.com/public/question/c5fa0f4a-84c2-48b2-b1b1-c6c8d3b6af79"
                     class="shadow graphic"
                     width="800"
                     height="600"
-                ></iframe-->
+                ></iframe>
                 </div>        
               </div>              
               <div class="col-md-4 ml-auto my-3 my-lg-4">
@@ -126,12 +126,12 @@
                 <p>Elegí una provincia en el selector del gráfico para ver los casos nuevos de Coronavirus por día.</p>
               </div>
               <div class="col-md-7 my-3 my-lg-4">
-                <!--iframe
+                <iframe
                   src="https://apibueno-dashboard.herokuapp.com/public/question/35107a89-4741-486e-bb13-08d1962d6d6e"
                   class="shadow graphic"
                   width="800"
                   height="600"
-              ></iframe-->
+              ></iframe>
               </div>
             </div>
           </div>
